# MLE4217_5219_book

./: ._config.yml.bak  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  _config.yml  _toc.yml  calendar.md  index.md  intro.md  myst.yml  pyproject.toml  requirements.txt  syllabus.md
atomistic_structure/: crystal_structure.ipynb  defect.md  index.md  molecule.md  noncrystalline_materials.md  prototypes.md  symmetry.md
atomistic_structure_I/: crystal_structure.ipynb  index.md  prototypes.md  reciprocal_space.md  structure_formats.md  unit_cell.md  vesta.md
atomistic_structure_II/: advanced_structure.ipynb  defect.md  index.md  interface.md  molecule.md  noncrystalline_materials.md  site_properties.md  smiles_and_graphs.md
computer/: git_examples.md  hardware.md  history.md  hpc.md  index.md  intro.md  performance.md  scaling.ipynb  software.md
database/: bulk_modulus.ipynb  concepts.md  database.md  formats.md  index.md  materials_database.md  materials_project.ipynb  pandas.ipynb
final_review/: atomistic_models.md  data_and_structures.md  foundations.md  high_throughput.md  index.md  models_and_theories.md  optimization.md  stat_mech_and_dft.md
high_throughput/: atomate.ipynb  codes.md  data_mining.md  high_throughput.ipynb  index.md  introduction.md  thermodynamics.md  workflow.md
machine_learning_I/: basic_ml.ipynb  data.md  features.md  index.md  introduction.md  learning.md  machine_learning.ipynb  models.md  pytorch.ipynb  task_algorithm.md  validation.md
machine_learning_II/: adv_ml.ipynb  diffusion_model.md  generative.md  gnn.md  graph.md  (+4 more)
(+88 files in other folders)
